<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user">Пользовательское соглашение</string>
    <string name="linkToCourse">https://practicum.yandex.ru/android-developer/</string>
    <string name="myEmail">en169@yandex.ru</string>
    <string name="emailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="emailText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="practicumOffer">https://yandex.ru/legal/practicum_offer/</string>
    <string name="message_button_refresh">Обновить</string>
    <string name="message_nothing_found">Ничего не нашлось</string>
    <string name="message_something_wrong">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="search_history_title">Вы искали</string>
    <string name="clear_history_button">Очистить историю</string>
    <string name="audio_player_duration">Длительность</string>
    <string name="audio_player_album">Альбом</string>
    <string name="audio_player_year">Год</string>
    <string name="audio_player_genre">Жанр</string>
    <string name="audio_player_country">Страна</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="no_playlists">Вы не создали ни одного плейлиста</string>
    <string name="mediateka_empty">Ваша медиатека пуста</string>
    <string name="selected_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_library">Медиатека</string>
    <string name="menu_settings">Настройки</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="playlist_create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="share_playlist">Поделиться</string>
    <string name="edit_playlist">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="no_tracks_for_sharing">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <plurals name="tracksCount">
        <item quantity="zero" >%d треков</item>
        <item quantity="one"  >%d трек</item>
        <item quantity="few"  >%d трека</item>
        <item quantity="many" >%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>
    <plurals name="minutesCount">
        <item quantity="zero" >%d минут</item>
        <item quantity="one"  >%d минута</item>
        <item quantity="few"  >%d минуты</item>
        <item quantity="many" >%d минут</item>
        <item quantity="other">%d минут</item>
    </plurals>
</resources>