<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorSecondary"
    tools:context=".ui.main.activity.MainFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        app:titleTextColor="@color/white"
        app:title="@string/app_name" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:icon="@drawable/search"
        android:text="@string/search"
        style="@style/mainScreenButton"/>

    <Button
        android:id="@+id/button_library"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:icon="@drawable/library"
        android:text="@string/library"
        style="@style/mainScreenButton"/>

    <Button
        android:id="@+id/button_settings"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:icon="@drawable/settings"
        android:text="@string/settings"
        style="@style/mainScreenButton"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="20dp">
    </FrameLayout>

</LinearLayout>