<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFFFFF"
    tools:context=".SettingsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:titleTextColor="@color/dark_gray"
        app:title="@string/settings"
        app:navigationIcon="@drawable/arrowback"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingHorizontal="@dimen/edge"
        android:paddingVertical="20dp"
        android:text="@string/dark_theme"
        android:textColor="@color/black"
        app:thumbTint="@color/switch_thumb_color"
        app:trackTint="@color/switch_track_color"
        android:textSize="@dimen/settings_text_size" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/share"
        android:paddingHorizontal="@dimen/edge"
        android:paddingVertical="20dp"
        android:text="@string/share"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/support"
        android:paddingHorizontal="@dimen/edge"
        android:paddingVertical="20dp"
        android:text="@string/support"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/arrowforward"
        android:paddingHorizontal="@dimen/edge"
        android:paddingVertical="20dp"
        android:text="@string/user"
        android:textColor="@color/black"
        android:textSize="@dimen/settings_text_size" />

</LinearLayout>