<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/colorPrimary"
    tools:context=".ui.search.activity.SearchFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        app:titleTextColor="?attr/colorOnSecondary"
        app:title="@string/search"
        app:navigationIcon="@drawable/arrowback"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/search_edittext_shape">
        <EditText
            android:id="@+id/inputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="12dp"
            android:drawableLeft="@drawable/search_icon"
            android:drawablePadding="4dp"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:inputType="text"
            android:hint="@string/search"
            android:textSize="@dimen/settings_text_size"
            android:fontFamily="@font/ys_display_regular"
            android:textColor="@color/dark_gray"
            android:textColorHint="?attr/colorTertiary"
            android:background="@null"/>
        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="12dp"
            android:layout_gravity="center_vertical|right"
            android:src="@drawable/x"
            android:visibility="gone"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvTrack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            tools:listitem="@layout/track_item"
            tools:itemCount="5"/>

        <LinearLayout
            android:id="@+id/historyLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="20dp"
                android:layout_marginHorizontal="24dp"
                android:textColor="?attr/colorOnSecondary"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="19sp"
                android:text="@string/search_history_title"/>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyTracks"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="vertical"
                tools:listitem="@layout/track_item"
                tools:itemCount="3"/>
            <Button
                android:id="@+id/clearHistoryButton"
                style="Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                app:cornerRadius="18dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="20dp"
                android:backgroundTint="?attr/colorOnSecondary"
                android:textColor="?attr/colorOnTertiary"
                android:textAllCaps="false"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="14sp"
                android:text="@string/clear_history_button"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">
            <ImageView
                android:id="@+id/messageIcon"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="100dp"
                android:src="@drawable/nothing_found"/>
            <TextView
                android:id="@+id/messageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="24dp"
                android:layout_marginHorizontal="24dp"
                android:textColor="?attr/colorOnSecondary"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="19sp"
                tools:text="Сообщение"/>
            <Button
                android:id="@+id/messageButton"
                style="Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                app:cornerRadius="18dp"
                android:layout_gravity="center_horizontal"
                android:backgroundTint="?attr/colorOnSecondary"
                android:textColor="?attr/colorOnTertiary"
                android:textAllCaps="false"
                android:fontFamily="@font/ys_display_medium"
                android:textSize="14sp"
                android:text="@string/message_button_refresh"/>

        </LinearLayout>

        <ProgressBar android:id="@+id/progressBar"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="140dp"
            android:indeterminateTint="@color/blue"
            android:visibility="gone"/>

    </FrameLayout>

</LinearLayout>